# fastapi_labs

./: .gitignore  Dockerfile  commands.txt  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/api/: users.py
app/schemas/: user.py
src/fastapi_lab1/: main.py
